# talise-contracts

./: README.md
talise/: .gitignore  AUTOSWAP.md  Move.toml  Published.toml  SECURITY-V7.md  UPGRADE-DRY-RUN.md
talise-automations/: DEPLOY.md  Move.toml  Published.toml
talise-automations/sources/: standing_order.move
talise-goals/: Move.toml  Published.toml
talise-goals/sources/: goal_vault.move
talise-goals/tests/: goal_vault_tests.move
talise-pay/: Move.toml  Published.toml
talise-pay/sources/: stream.move
talise-pay/tests/: cheque_tests.move  stream_tests.move
talise-payroll/: Move.toml  Published.toml
talise-payroll/scripts/: deploy.sh
talise-payroll/sources/: payroll.move
talise-privacy/: Move.toml  Published.toml
talise-privacy/circuit/: .gitignore  Cargo.toml  WASM_README.md  build-wasm.sh
talise-privacy/circuit/src/: constants.rs  lib.rs  merkle_tree.rs  prover.rs
talise-privacy/circuit/src/circuit/: mod.rs
talise-privacy/circuit/src/poseidon_opt/: mod.rs  poseidon_constants_opt.rs
talise-privacy/circuit/src/wasm/: mod.rs
talise-privacy/circuit/test/: wasm_prove.test.mjs
talise-privacy/circuit/tests/: poseidon_parity.rs
talise-privacy/sources/: constants.move  errors.move  events.move  ext_data.move  merkle.move  note_account.move  proof.move  shielded_pool.move
talise-privacy/tests/: groth16_verify_tests.move  merkle_tests.move  poseidon_root_tests.move  shielded_pool_tests.move
talise-profile/: DEPLOY.md  Move.toml
talise-profile/sources/: profile.move
talise-profile/tests/: profile_tests.move
talise-yield/: Move.toml  Published.toml
talise-yield/sources/: yield_router.move
talise-yield/tests/: yield_router_tests.move
talise/scripts/: deploy.sh
talise/sources/: auto_swap.move  batch_pay.move  cheque.move  compliance.move  (+4 more)
(+9 files in other folders)
