[package]
name = "talise-privacy-circuit"
version = "0.1.0"
edition = "2021"
description = "Talise privacy ZK circuit (vendored from Interest Protocol Vortex, BN254 Groth16). DEV/TEST keys only — NOT a trusted setup ceremony."

[lib]
name = "talise_privacy_circuit"
# rlib   -> native crate (bins, cargo test, prove_deposit) — unchanged.
# cdylib -> wasm32 target for `wasm-pack build` (browser prover).
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
hex = "0.4.3"
rand_chacha = "0.3"
rand_core = "0.6"
# Real entropy for proof randomness (OsRng) — NOT a zero seed.
# The `js` feature routes getrandom to crypto.getRandomValues() in the browser,
# so the wasm prover gets real entropy too (NOT a fixed/zero seed).
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- wasm-only deps (only compiled for the wasm32 target) --------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "prove_deposit"
path = "src/bin/prove_deposit.rs"

[[bin]]
name = "prove_withdraw_harness"
path = "src/bin/prove_withdraw_harness.rs"

[[bin]]
name = "prove_lifecycle"
path = "src/bin/prove_lifecycle.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
